[tool.poetry]
name = "multipass"
version = "1.0a1"
description = "Multipass is a tool to transparently work with multiple pass repositories."
authors = ["Julian Fölsch <julianf@paktosan.de>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/Paktosan/multipass"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

